Updated .bib file with latest references

--- a/bibliography/bibliography-heterogeneity.bib
+++ b/bibliography/bibliography-heterogeneity.bib
@@ -579,3 +579,52 @@
   author = {Schmidt, Frank L. and Hunter, John E.},
   doi = {10.4135/9781483398105}
 }
+
+
+@article{10.1126/science.1255484,
+  title = {Publication Bias in the Social Sciences: {{Unlocking}} the File Drawer},
+  volume = {345},
+  shorttitle = {Publication Bias in the Social Sciences},
+  doi = {10.1126/science.1255484},
+  number = {6203},
+  journal = {Science},
+  author = {Franco, Annie and Malhotra, Neil and Simonovits, Gabor},
+  year = {2014},
+  pages = {1502--1505},
+  file = {C:\\Users\\Anton2\\Zotero\\storage\\3I7CEMJR\\1502.html}
+}
+
+@article{10.1177/1948550615598377,
+  title = {Underreporting in Psychology Experiments: {{Evidence}} from a Study Registry},
+  volume = {7},
+  shorttitle = {Underreporting in Psychology Experiments},
+  doi = {10.1177/1948550615598377},
+  number = {1},
+  journal = {Social Psychological and Personality Science},
+  author = {Franco, Annie and Malhotra, Neil and Simonovits, Gabor},
+  year = {2016},
+  pages = {8--12},
+  file = {C:\\Users\\Anton2\\Zotero\\storage\\AQGY57IH\\1948550615598377.html;C:\\Users\\Anton2\\Zotero\\storage\\BA232QPZ\\1948550615598377.html}
+}
+
+@article{10.1037/1082-989x.2.4.447,
+  title = {Finding the Missing Science: The Fate of Studies Submitted for Review by a Human Subjects Committee.},
+  volume = {2},
+  shorttitle = {Finding the Missing Science},
+  doi = {10.1037/1082-989x.2.4.447},
+  number = {4},
+  journal = {Psychological Methods},
+  author = {Cooper, Harris and DeNeve, Kristina and Charlton, Kelly},
+  year = {1997},
+  pages = {447},
+  file = {C:\\Users\\Anton2\\Zotero\\storage\\IAXLYRBW\\1997-43554-008.html}
+}
+
+@article{10.31219/osf.io/gv25ca,
+  title = {The {{Effect}} of {{Publication Bias}} on the {{Assessment}} of {{Heterogeneity}}},
+  doi = {10.31219/osf.io/gv25c},
+  abstract = {One of the main goals of meta-analysis is to test and estimate the heterogeneity of effect size. We examined the effect of publication bias on the Q-test and assessments of heterogeneity, as a function of true heterogeneity, publication bias, true effect size, number of studies, and variation of sample sizes. The expected values of heterogeneity measures H2 and I2 were analytically derived, and the power and the type I error rate of the Q-test were examined in a Monte-Carlo simulation study. Our results show that the effect of publication bias on the Q-test and assessment of heterogeneity is large, complex, and non-linear. Publication bias can both dramatically decrease and increase heterogeneity. Extreme homogeneity can occur even when the population heterogeneity is large. Particularly if the number of studies is large and population effect size is small, publication bias can cause both extreme type I error rates and power of the Q-test close to 0 or 1. We therefore conclude that the Q-test of homogeneity and heterogeneity measures H2 and I2 are generally not valid in assessing and testing heterogeneity when publication bias is present, especially when the true effect size is small and the number of studies is large. We introduce a web application, Q-sense, which can be used to assess the sensitivity of the Q-test to publication bias, and we apply it to two published meta-analysis. Meta-analytic methods should be enhanced in order to be able to deal with publication bias in their assessment and tests of heterogeneity.},
+  author = {Augusteijn, Hilde and van Aert, Robbie C. M. and van Assen, Marcel A. L. M.},
+  month = jun,
+  year = {2017}
+}
