--- a/bibliography/bibliography-heterogeneity.bib
+++ b/bibliography/bibliography-heterogeneity.bib
@@ -628,3 +628,17 @@
   month = jun,
   year = {2017}
 }
+
+@article{10.1037/0033-2909.133.1.65,
+  title = {The Nature of Procrastination: {{A}} Meta-Analytic and Theoretical Review of Quintessential Self-Regulatory Failure.},
+  volume = {133},
+  issn = {1939-1455, 0033-2909},
+  shorttitle = {The Nature of Procrastination},
+  doi = {10.1037/0033-2909.133.1.65},
+  language = {en},
+  number = {1},
+  journal = {Psychological Bulletin},
+  author = {Steel, Piers},
+  year = {2007},
+  pages = {65-94}
+}
